--- a/_data/compsci.yml
+++ b/_data/compsci.yml
@@ -1,11 +1,11 @@
 # CSP course meta data
 Unit1:
-  title: Build a Lab Notebook
-  description:  Install Tools.  Design lab notebook.  Learn GitHub Pages. Work with Pair (pair name). 
+  title: Begin Passion Project
+  description:  Create team repositories for frontend and backend. Brainstorm ideas. Work with team. 
   start: 0
-  end: 3
+  end: 2
 Unit2:
-  title: Learn Language
-  description: Learn (JavaScript|Python|Java).  Start Agile development process.
-  start: 4
-  end: 7
+  title: Continue Work on Passion Project
+  description: Collaboration and code with team. Wrap up project for Night at the Museum.
+  start: 3
+  end: 5
